--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -31,10 +31,6 @@ jobs:
           jwt.secret:                  ${{ secrets.JWT_SECRET }}
           jwt.expire-seconds:          ${{ secrets.JWT_EXPIRE_SECONDS }}
 
-      - name: Debug secrets
-        run: echo ${{ secrets.DOCKERHUB_USERNAME }} 
-
-
       - name: Cache Gradle
         uses: actions/cache@v3
         with:
@@ -55,7 +51,7 @@ jobs:
             | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
       - name: Build Docker image
-        run: docker build --builder default -t ${{ secrets.DOCKERHUB_USERNAME }}/hireu:latest .
+        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/hireu:latest .
 
       - name: Push to Docker Hub
         run: |
