--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -51,9 +51,9 @@ jobs:
             | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
       - name: Build Docker image
-        run: |
-          docker buildx build --load \
-            -t ${{ secrets.DOCKERHUB_USERNAME }}/hireu:latest .
+        env:
+          DOCKER_BUILDKIT: 0
+        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/hireu:latest .
 
       - name: Push to Docker Hub
         run: |
